# profess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.md  readme.md
.github/workflows/: ci.yml  generate-paper.yml
doc/source/: conf.py  examples.rst  install.rst  user-guide.md
doc/source/_static/: custom.css
doc/source/examples/: H-and-H2.md  HydrogenAtom.ipynb  HydrogenAtom.md
doc/source/user-guide/: build.rst
documentation/source/: about.rst  conf.py  index.rst  install.rst  theory.rst  user-guide.md
documentation/source/_static/: custom.css
documentation/source/_templates/: sidebar-nav-bs.html
documentation/source/examples/: Aluminium.ipynb  HydrogenDimer.ipynb
documentation/source/user-guide/: build.rst  compute.rst  modify.rst
include/: ion_ion.hpp  ions.hpp  minimizers.hpp  system.hpp  tools.hpp  units.hpp
include/functionals/: functional.hpp  hartree.hpp  huang_carter.hpp  ion_electron.hpp  kinetic_class_a.hpp  kinetic_gga.hpp  libxc.hpp  luo_karasiev_trickey.hpp  perdew_burke_ernzerhof.hpp  perdew_zunger.hpp  perrot.hpp  smargiassi_madden.hpp  thomas_fermi.hpp  thomas_fermi_weizsaecker.hpp  wang_govind_carter.hpp  wang_govind_carter_1999_i.hpp  wang_teter.hpp  weizsaecker.hpp
paper/: paper.bib  paper.md
pyrofess/: ase_tools.py  extras.cpp  pyrofess.cpp
source/: ion_ion.cpp  ions.cpp  minimizers.cpp  system.cpp  tools.cpp  units.cpp
source/functionals/: functional.cpp  hartree.cpp  huang_carter.cpp  ion_electron.cpp  kinetic_class_a.cpp  kinetic_gga.cpp  libxc.cpp  luo_karasiev_trickey.cpp  perdew_burke_ernzerhof.cpp  perdew_zunger.cpp  perrot.cpp  smargiassi_madden.cpp  thomas_fermi.cpp  thomas_fermi_weizsaecker.cpp  wang_govind_carter.cpp  wang_govind_carter_1999_i.cpp  wang_teter.cpp  weizsaecker.cpp
test/: test_external_potential.py  test_functional.py  test_geom_opt.py  test_minimizers.py  test_system.py  test_tools.py  tools_for_tests.py
website/source/: about.rst  conf.py  contact.rst  examples.rst  index.rst  user-guide.md
website/source/_static/: custom.css
website/source/_templates/: sidebar-nav-bs.html
website/source/examples/: Magnesium.ipynb  aluminum.md  gibbs.md  h-and-h2.md  magnesium.md
website/source/examples/airss/: Mg.cell  airss.md  relax.py
website/source/user-guide/: build.rst  inspect.rst  modify.rst  report.rst
